<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Takehome</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="header">Make the most of your paycheck.</string>
    <string name="login_bigtext">Free service, just enter a 4 digit code to get started.</string>
    <string name="login_forgottext">-> Forgot your Password/ Email?</string>
    <string name="login_registertext">-> Register account?</string>
    <string name="login_paycheck">Paycheck management</string>
    <string name="login_paycheck_detail">Pay with your paycheck - before till after payday - to stretch it out and keep more of your money.</string>
    <string name="login_concept">Basic concept</string>
    <string name="login_concept_detail">Takehome makes it easy to manage your paycheck. Using a simple formula, it keeps tab of the bottom line while you list the payments you intend to make. Start a free account today. Here is how you can benefit:</string>
    
    <string name="login_1">Determine cash on hand by listing out the bills that are due.</string>
    <string name="login_2">Workout several scenarios and see how far the paycheck can go.</string>
    <string name="login_3">Evaluate bill payment strategies based on due dates and amounts due.</string>
    
    <string name="scenario_new">Start a new pay scenario</string>
    <string name="scenario_edit">Manage paycheck and play with payment allocations</string>

</resources>
